# KubeFlo

./: README.md  app.py  db-claim0-persistentvolumeclaim.yaml  db-deployment.yaml  db-persistentvolume.yaml  db-service.yaml  docker-compose.yml  dockerfile  ingress.yaml  init.sql  pyproject.toml  web-deployment.yaml  web-service.yaml
static/: login.js  planning_prof.js  prof.js  script.js  style.css
templates/: admin.html  afficher_formateurs.html  base.html  eleve.html  gestion_disponibilites.html  index.html  planning_prof.html  prof.html  propos.html  style.css
templates/admin/: create.html  delete.html  read.html  update.html
templates/admin/create/: create-compte-eleve.html  create-compte-formateur.html  create-eleve.html  create-formateur.html
templates/admin/delete/: delete_eleve.html  delete_formateur.html
templates/admin/update/: update_compte_eleve.html  update_compte_eleve_form.html  update_compte_formateur.html  update_compte_formateur_form.html  update_eleve.html  update_eleve_form.html  update_formateur.html  update_formateur_form.html
